<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete_icon"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_change_color"
        android:icon="@drawable/ic_action_name"
        android:title="@string/change_color"
        app:showAsAction="always" />


    <!-- Settings, should always be in the overflow -->


</menu>