<resources>
    <string name="app_name">NOTE</string>
    <string name="delete_icon">Delete</string>
    <string name="export_icon">Export</string>
    <string name="toast_export">Export successful</string>

    <string name="sort_options_prompt">Choose sorting</string>
    <string name="alphabetical">alphabetical</string>
    <string name="creation_date">creation date</string>
    <string name="storting_menue">sorting</string>
    <string name="add_geo_tag">Add Geo Tag     </string>
    <string name="share_icon" />

    <string name="pinned">pinned</string>
    <string name="import_menu">import</string>
    <string name="night_mode">nightmode</string>
    <string name="change_color">Change color</string>

    <string name="search_title">Search</string>

    <string-array name="sort_options">
        <item>Sort by Title</item>
        <item>Sort by Creation Date</item>
        <item>Unsorted</item>
    </string-array>


</resources>
