...
        app:layout_constraintEnd_toStartOf="@+id/checkBox2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/export_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/note_title" />

    <TextView
        android:id="@+id/note_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="0sp"
...
